php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #68478 access.log don't use prefix
Submitted: 2014-11-22 09:21 UTC Modified: 2014-11-22 09:33 UTC
From: remi@php.net Assigned: remi (profile)
Status: Closed Package: FPM related
PHP Version: 5.5.19 OS:
Private report: No CVE-ID: None
 [2014-11-22 09:21 UTC] remi@php.net
Description:
------------
In php-fpm.conf

;access.log = log/$pool.access.log

So this relative path should honor prefix
But log is open (fpm_log_open) "before" prefix analyse (fpm_conf_process_all_pools)

Switching the call order fix this issue.


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2014-11-22 09:31 UTC] remi@php.net
Automatic comment on behalf of remi
Revision: http://git.php.net/?p=php-src.git;a=commit;h=b924af8db99e97ef328a9833c8d7073b6193dec8
Log: Fixed Bug #68478 acess_log don't use prefix
 [2014-11-22 09:31 UTC] remi@php.net
-Status: Open +Status: Closed
 [2014-11-22 09:32 UTC] remi@php.net
-Assigned To: +Assigned To: remi
 [2014-11-22 09:33 UTC] remi@php.net
-Summary: acess_log don't use prefix +Summary: access.log don't use prefix
 [2014-11-22 09:37 UTC] remi@php.net
Automatic comment on behalf of remi
Revision: http://git.php.net/?p=php-src.git;a=commit;h=c50ee655ea0c1ba4a1f6f7a6e37989100509d87c
Log: Fixed Bug #68478 acess_log don't use prefix
 [2014-11-26 16:21 UTC] ab@php.net
Automatic comment on behalf of remi
Revision: http://git.php.net/?p=php-src.git;a=commit;h=c50ee655ea0c1ba4a1f6f7a6e37989100509d87c
Log: Fixed Bug #68478 acess_log don't use prefix
 [2014-11-26 16:21 UTC] ab@php.net
Automatic comment on behalf of remi
Revision: http://git.php.net/?p=php-src.git;a=commit;h=b924af8db99e97ef328a9833c8d7073b6193dec8
Log: Fixed Bug #68478 acess_log don't use prefix
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Sep 28 21:00:01 2026 UTC